# bare-run

./: CMakeLists.txt  README.md  bin.js  index.js  package.json  test.js
.github/workflows/: integrate.yml  prebuild.yml  publish.yml  test.yml
lib/: android.js  builtins.json  darwin.js  desktop.js  driver.c  driver.mjs  errors.js  ios.js  prebuilds.js  spawn.js  testbed.c
lib/android/: adb.js  sdk.js
lib/ios/: simctl.js  xcrun.js
test/fixtures/basic/: index.js
